--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "silverreve23@gmail.com"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
     "require": {},
 	"autoload": {
 	    "psr-4": {
